--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css">
+        <title>Login Page</title>
+        <style>
+            td {
+                padding-bottom: 50px;
+                padding-top: 50px;
+                padding-left: 150px;
+                padding-right: 150px;
+                border-width:1px;
+                border-style:solid;
+                border-color:#CCCCCC;
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello World!</h1>
+    <center>
+        <table bgcolor="#FFFFFF">
+            <td>
+                <form class="pure-form" method="post" action="/SpringMVC/portfolio/index.jsp">
+                    <fieldset>
+                        <button type="submit" class="pure-button pure-button-primary">Go</button>
+                    </fieldset>
+                </form>
+            </td>
+        </table>
+    </center>
     </body>
 </html>
